--- a/src/demo.html
+++ b/src/demo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Browser upgrade</title>
-  <script src="browser-upgrade.js"></script><script>window.onload=function(){e('./')}</script>
+  <script src="browser-upgrade.js"></script>
 </head>
 <body>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis sollicitudin lacus sed laoreet. Nam gravida, ex id pharetra elementum, nisi dolor vulputate erat, sed viverra lacus ipsum nec ligula. Fusce pharetra pellentesque lacus. Donec quis rhoncus erat. Morbi pulvinar eleifend enim, ac pellentesque nunc tristique sed. Nunc mi purus, consequat in malesuada id, commodo sed sem. Integer cursus lacinia dui, quis aliquet libero dictum nec.</p>
